feat: add delete endpoints, and ingress to openapi/swagger-ui
